add picture for link

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="Resume AI - Professional Resume Analyzer & Builder" />
     <meta property="og:description" content="Optimize your resume with AI-powered analysis. Get ATS scores, keyword matching, and professional resume building tools to land your dream job." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/public/resume.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/public/resume.png" />
   </head>
 
   <body>
