add picture for link

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="Resume AI - Professional Resume Analyzer & Builder" />
     <meta property="og:description" content="Optimize your resume with AI-powered analysis. Get ATS scores, keyword matching, and professional resume building tools to land your dream job." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/public/resume.png" />
+    <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcybernews.com%2Fai-tools%2Fbest-ai-resume-builder%2F&psig=AOvVaw2OXOJqShiPTeprZqOOzvFY&ust=1758021583839000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCPi9s_PS2o8DFQAAAAAdAAAAABAf" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="/public/resume.png" />
+    <meta name="twitter:site" content="@ai_resume_analyzer" />
+    <meta name="twitter:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcybernews.com%2Fai-tools%2Fbest-ai-resume-builder%2F&psig=AOvVaw2OXOJqShiPTeprZqOOzvFY&ust=1758021583839000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCPi9s_PS2o8DFQAAAAAdAAAAABAf" />
   </head>
 
   <body>
